actualizacion de estilos y tiempo del login

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -275,7 +275,14 @@
       <div class="columna_video">
         <div class="cuadrodecargado">
         </div>
-        <img src="/assets/img/videopolis.gif" alt="" />
+        <video
+            class="video_pro_jannier"
+            autoplay
+            muted
+            playsinline
+            loop
+            src="../assets/img/videopolis.mp4"
+          ></video>
       </div>
     </section>
 
@@ -632,7 +639,7 @@
           class="cont_item_mis_servicios cursor-scale small"
           href="/pages/p_ux_research.html"
         >
-          <h4>UX - RESEARSH</h4>
+          <h4>UX - RESEARCH</h4>
           <div class="ir_boton"><img src="/assets/img/ir.svg" alt="" /></div>
           <p>( 04 )</p>
           <section class="cont_slider_banderas">
