modificacion de rutas y animacion de lista menu

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -74,11 +74,12 @@
       <div class="contendor_activo_de_menu">
         <div class="list_menu">
           <ul class="lista_uno">
+
             <div class="cont_opcion_lista">
-              <a style="color: #b8b8b8"
-                >Home
+              <div class="block">
+                <p class="ss">Home</p>
                 <p>(01)</p>
-              </a>
+              </div>
             </div>
 
             <div class="cont_opcion_lista cursor-scale small">
