--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -46,14 +46,14 @@
         <div class="contendor_activo_de_menu">
           <div class="list_menu">
             <ul class="lista_uno">
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a href="/pages/inicio.html"
                   >Home
                   <p>(01)</p>
                 </a>
               </div>
   
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_ui.html"
                   >UX - UI
                   <p>(02)</p>
@@ -61,20 +61,20 @@
               </div>
   
               <div class="cont_opcion_lista">
-                <a style="color: #b8b8b8"
-                  >Frontend
+                <div class="block">
+                  <p class="ss">Frontend</p>
                   <p>(03)</p>
-                </a>
+                </div>
               </div>
   
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_writing.html"
                   >UX - Writing
                   <p>(04)</p>
                 </a>
               </div>
   
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_research.html"
                   >UX - Research
                   <p>(05)</p>
@@ -214,10 +214,13 @@
     </section>
 
     <!-- javascripts -->
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="../js/scroll.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
