--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -50,35 +50,35 @@
       <div class="contendor_activo_de_menu">
         <div class="list_menu">
           <ul class="lista_uno">
-            <div class="cont_opcion_lista">
-              <a  href="/pages/inicio.html"
+            <div class="cont_opcion_lista cursor-scale small">
+              <a href="/pages/inicio.html"
                 >Home
                 <p>(01)</p>
               </a>
             </div>
 
             <div class="cont_opcion_lista">
-              <a translate="no" style="color: #b8b8b8"
-                >UX - UI
+              <div class="block">
+                <p class="ss">UX - UI</p>
                 <p>(02)</p>
-              </a>
+              </div>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a href="/pages/p_ux_developer.html"
                 >Frontend
                 <p>(03)</p>
               </a>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a translate="no" href="/pages/p_ux_writing.html"
                 >UX - Writing
                 <p>(04)</p>
               </a>
             </div>
 
-            <div class="cont_opcion_lista">
+            <div class="cont_opcion_lista cursor-scale small">
               <a translate="no" href="/pages/p_ux_research.html"
                 >UX - Research
                 <p>(05)</p>
@@ -165,7 +165,7 @@
     </section>
     <!-- .3 cinta -->
     <section class="cont_grilla_proyectos">
-      <a href="../projects/portafolio_daniel.html" class="cont_proyectos">
+      <a href="../projects/portafolio_daniel.html" class="cont_proyectos cursor-scale small">
         <img src="../assets/img/mockupjannieruno.jpg" alt="" />
         <div class="cont_pie_proyecto">
           <p>PORTAFOLIO DANIEL</p>
