--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -52,35 +52,35 @@
         <div class="contendor_activo_de_menu">
           <div class="list_menu">
             <ul class="lista_uno">
-              <div class="cont_opcion_lista">
-                <a style="color: #b8b8b8"
+              <div class="cont_opcion_lista cursor-scale small">
+                <a href="/pages/inicio.html"
                   >Home
                   <p>(01)</p>
                 </a>
               </div>
 
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_ui.html"
                   >UX - UI
                   <p>(02)</p>
                 </a>
               </div>
 
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a href="/pages/p_ux_developer.html"
                   >Frontend
                   <p>(03)</p>
                 </a>
               </div>
 
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_writing.html"
                   >UX - Writing
                   <p>(04)</p>
                 </a>
               </div>
 
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_research.html"
                   >UX - Research
                   <p>(05)</p>
