--- a/pages/p_ux_research.html
+++ b/pages/p_ux_research.html
@@ -47,28 +47,28 @@
         <div class="contendor_activo_de_menu">
           <div class="list_menu">
             <ul class="lista_uno">
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a href="/pages/inicio.html"
                   >Home
                   <p>(01)</p>
                 </a>
               </div>
   
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_ui.html"
                   >UX - UI
                   <p>(02)</p>
                 </a>
               </div>
   
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a href="/pages/p_ux_developer.html"
                   >Frontend
                   <p>(03)</p>
                 </a>
               </div>
   
-              <div class="cont_opcion_lista">
+              <div class="cont_opcion_lista cursor-scale small">
                 <a translate="no" href="/pages/p_ux_writing.html"
                   >UX - Writing
                   <p>(04)</p>
@@ -76,10 +76,10 @@
               </div>
   
               <div class="cont_opcion_lista">
-                <a translate="no" style="color: #b8b8b8"
-                  >UX - Research
-                  <p>(05)</p>
-                </a>
+                <div class="block">
+                  <p class="ss">UX - Research</p>
+                  <p>(04)</p>
+                </div>
               </div>
             </ul>
   
