--- a/pages/p_ux_writing.html
+++ b/pages/p_ux_writing.html
@@ -69,10 +69,10 @@
               </div>
   
               <div class="cont_opcion_lista">
-                <a translate="no" style="color: #b8b8b8"
-                  >UX - Writing
+                <div class="block">
+                  <p class="ss">UX - Writing</p>
                   <p>(04)</p>
-                </a>
+                </div>
               </div>
   
               <div class="cont_opcion_lista">
