add nueva ruta en grilla de proyectos ux-ui

--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -176,7 +176,7 @@
         </div>
       </a>
 
-      <a href="$" class="cont_proyectos">
+      <a href="../projects/proyecto_portafolio_dsains.html" class="cont_proyectos">
         <img src="../assets/img/proyectoplantilla.png" alt="" />
         <div class="cont_pie_proyecto">
           <p>DESIGNER</p>
