mod de script para arreglar problemas con el logo

--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -115,7 +115,7 @@
             <p>PAGINA WEB</p>
           </div>
           <div class="titulo">
-            <h1 translate="no">Portafolio daniel</h1>
+            <h1 translate="no">Portafolio Daniel</h1>
           </div>
           <div class="parrafo">
             <a class="cursor-scale small"
@@ -346,7 +346,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="../js/jsproyectos.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
