actualizacion de page proyecto dsains

--- a/projects/proyecto_portafolio_dsains.html
+++ b/projects/proyecto_portafolio_dsains.html
@@ -24,8 +24,7 @@
 
   <body id="proyecto_scroll" class="body_proyecto">
     <div class="cursor"></div>
-    <div id="cont_proyectos_scrolls" class="cont_proyectos_scrolls">
-
+    
       <!-- Menu -->
       <section class="conte__menui">
         <header class="header__index">
@@ -105,6 +104,8 @@
           </div>
         </div>
       </section>
+    <div id="cont_proyectos_scrolls" class="cont_proyectos_scrolls">
+
 
       <!-- .1 inicio -->
       <section class="cont_inicios">
@@ -158,7 +159,7 @@
           <div class="data">
             <div class="cont_dato">
               <p class="titulo">Área</p>
-              <p class="dato">Desarrollo</p>
+              <p class="dato">Diseño y Desarrollo</p>
               <div class="cont_icon">
                 <img
                   src="../assets/img/iconosproyectos/iconodesarrollo.svg"
@@ -175,7 +176,7 @@
             </div>
             <div class="cont_dato">
               <p class="titulo">Fecha</p>
-              <p class="dato">02-05-2024</p>
+              <p class="dato">10-04-2024</p>
               <div class="cont_icon">
                 <img
                   src="../assets/img/iconosproyectos/iconofecha.svg"
@@ -185,10 +186,7 @@
             </div>
           </div>
           <div class="data_proyecto">
-            Pagina web de un portafolio echo para un desarrollador full-stack
-            con 2 vistas totalmente responsive, Estilo minimalista y limpio con
-            paleta tri-color y multitono, fuentes largas y san serif estilo
-            urbano y en contraste al blanco.
+            Portafolio web, echo con el fin de mostrar proyectos de diferentes áreas enfocadas al diseño y desarrollo de productos tecnológicos como ux -ui , ux - writing, ux - research y desarrollo frontend, este proyecto es propio por lo que el diseño y desarrollo es propio de dsains, todo el estilo esta hecho en base logo, animaciones sencillas con paleta bi tono.
           </div>
         </div>
       </section>
@@ -203,13 +201,9 @@
             </p>
             <p style="color: #000000">#FFFFFF</p>
           </div>
-          <div style="background: #ff4d00" class="cont_color_uno">
+          <div style="background: #F32400" class="cont_color_uno">
             <p class="titulo">Primario</p>
-            <p>#FF4D00</p>
-          </div>
-          <div style="background: #303030" class="cont_color_uno">
-            <p class="titulo">segundario</p>
-            <p>#303030</p>
+            <p>#F32400</p>
           </div>
           <div style="background: #000000" class="cont_color_uno">
             <p class="titulo">Fuente</p>
@@ -249,32 +243,6 @@
           </div>
         </div>
 
-        <div class="fuente">
-          <p>Segunda Fuente</p>
-          <img class="img_font" src="../assets/img/monanarrow.svg" alt="" />
-          <div class="cont_fuentess">
-            <div class="cont_font">
-              <img src="../assets/img/blacknarrow.svg" alt="" />
-              <p class="nombre_fuente">Black Narrow</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/boldnarrow.svg" alt="" />
-              <p class="nombre_fuente">Bold Narrow</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/mediumnarrow.svg" alt="" />
-              <p class="nombre_fuente">Medium Narrow</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/regularnarrow.svg" alt="" />
-              <p class="nombre_fuente">Regular Narrow</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/lightnarrow.svg" alt="" />
-              <p class="nombre_fuente">Light Narrow</p>
-            </div>
-          </div>
-        </div>
       </section>
 
       </div>
