add img de inicio proyecto dsains

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -718,14 +718,14 @@
       <div class="cont_de_proyectos">
 
         <a href="/projects/portafolio_daniel.html" class="proyecto  cursor-scale small">
-          <p> Portafolio daniel</p>
+          <p> Portafolio Daniel</p>
           <img src="/assets/img/mockupjannieruno.jpg" alt="">
           <div id="target" class="cont_boton_ver_proyecto"> <p class="boton_ver_proyecto">Ver proyecto</p></div>
         </a>
 
-        <a href="/projects/portafolio_daniel.html" class="proyecto  cursor-scale small">
-          <p> Portafolio daniel</p>
-          <img src="/assets/img/mockupjannieruno.jpg" alt="">
+        <a href="/projects/proyecto_portafolio_dsains.html" class="proyecto  cursor-scale small">
+          <p>Dsains</p>
+          <img src="/assets/img/iportafolio.png" alt="">
           <div id="targetdos" class="cont_boton_ver_proyecto"> <p id="botondos" class="boton_ver_proyecto">Ver proyecto</p></div>
         </a>
 
