--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -177,13 +177,13 @@
         </div>
       </a>
 
-      <a href="../projects/proyecto_portafolio_dsains.html" class="cont_proyectos">
-        <img src="../assets/img/proyectoplantilla.png" alt="" />
+      <a href="../projects/proyecto_portafolio_dsains.html" class="cont_proyectos cursor-scale small">
+        <img src="../assets/img/iportafolio.png" alt="" />
         <div class="cont_pie_proyecto">
-          <p>DESIGNER</p>
+          <p>DSAINS</p>
           <div class="cont_fecha">
             <img src="../assets/img/iconoproyectoplantilla.svg" alt="" />
-            <p>01-01-2023</p>
+            <p>10-04-2024</p>
           </div>
         </div>
       </a>
