add nuevo estilo de proyectos

--- a/projects/proyecto_portafolio_dsains.html
+++ b/projects/proyecto_portafolio_dsains.html
@@ -24,120 +24,120 @@
 
   <body id="proyecto_scroll" class="body_proyecto">
     <div class="cursor"></div>
-    
-      <!-- Menu -->
-      <section class="conte__menui">
-        <header class="header__index">
-          <div class="cont__logo__nav">
-            <a href="../pages/inicio.html">
-              <lottie-player
-                id="logo"
-                src="../assets/img/logoanimado.json"
-                speed="1"
-                style="width: 100px"
-                autoplay
-              >
-              </lottie-player>
-            </a>
-          </div>
-          <div class="icono-menu">
-            <div class="bars__menu">
-              <span class="line1__bars-menu"></span>
-              <span class="line2__bars-menu"></span>
-              <span class="line3__bars-menu"></span>
-            </div>
-          </div>
-        </header>
-        <div class="contendor_activo_de_menu">
-          <div class="list_menu">
-            <ul class="lista_uno">
-              <div class="cont_opcion_lista cursor-scale small">
-                <a href="/pages/inicio.html"
-                  >Home
-                  <p>(01)</p>
-                </a>
-              </div>
 
-              <div class="cont_opcion_lista cursor-scale small">
-                <a translate="no" href="/pages/p_ux_ui.html"
-                  >UX - UI
-                  <p>(02)</p>
-                </a>
-              </div>
-
-              <div class="cont_opcion_lista cursor-scale small">
-                <a href="/pages/p_ux_developer.html"
-                  >Frontend
-                  <p>(03)</p>
-                </a>
-              </div>
-
-              <div class="cont_opcion_lista cursor-scale small">
-                <a translate="no" href="/pages/p_ux_writing.html"
-                  >UX - Writing
-                  <p>(04)</p>
-                </a>
-              </div>
-
-              <div class="cont_opcion_lista cursor-scale small">
-                <a translate="no" href="/pages/p_ux_research.html"
-                  >UX - Research
-                  <p>(05)</p>
-                </a>
-              </div>
-            </ul>
-
-            <a
-              class="boton_contactar"
-              href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-              target="_blank"
-              >CONTACTAME</a
+    <!-- Menu -->
+    <section class="conte__menui">
+      <header class="header__index">
+        <div class="cont__logo__nav">
+          <a href="../pages/inicio.html">
+            <lottie-player
+              id="logo"
+              src="../assets/img/logoanimado.json"
+              speed="1"
+              style="width: 100px"
+              autoplay
             >
-
-            <div class="list_social">
-              <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
-                >LinkedIn</a
-              >
-              <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-              <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-            </div>
+            </lottie-player>
+          </a>
+        </div>
+        <div class="icono-menu">
+          <div class="bars__menu">
+            <span class="line1__bars-menu"></span>
+            <span class="line2__bars-menu"></span>
+            <span class="line3__bars-menu"></span>
           </div>
         </div>
-      </section>
+      </header>
+      <div class="contendor_activo_de_menu">
+        <div class="list_menu">
+          <ul class="lista_uno">
+            <div class="cont_opcion_lista cursor-scale small">
+              <a href="/pages/inicio.html"
+                >Home
+                <p>(01)</p>
+              </a>
+            </div>
+
+            <div class="cont_opcion_lista cursor-scale small">
+              <a translate="no" href="/pages/p_ux_ui.html"
+                >UX - UI
+                <p>(02)</p>
+              </a>
+            </div>
+
+            <div class="cont_opcion_lista cursor-scale small">
+              <a href="/pages/p_ux_developer.html"
+                >Frontend
+                <p>(03)</p>
+              </a>
+            </div>
+
+            <div class="cont_opcion_lista cursor-scale small">
+              <a translate="no" href="/pages/p_ux_writing.html"
+                >UX - Writing
+                <p>(04)</p>
+              </a>
+            </div>
+
+            <div class="cont_opcion_lista cursor-scale small">
+              <a translate="no" href="/pages/p_ux_research.html"
+                >UX - Research
+                <p>(05)</p>
+              </a>
+            </div>
+          </ul>
+
+          <a
+            class="boton_contactar"
+            href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank"
+            >CONTACTAME</a
+          >
+
+          <div class="list_social">
+            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+              >LinkedIn</a
+            >
+            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <div id="cont_proyectos_scrolls" class="cont_proyectos_scrolls">
-
-
       <!-- .1 inicio -->
       <section class="cont_inicios">
         <div class="colum_unos">
           <div class="cont_titulo">
+            <div class="tipo">
+              <p>PAGINA WEB</p>
+            </div>
+            <div class="titulo">
+              <h1 translate="no">Portafolio Dsains</h1>
+            </div>
+            <div class="parrafo">
+              <a
+                class="cursor-scale small"
+                class="boton_contactar"
+                href="https://dsilgadosalcedo.vercel.app/"
+                target="_blank"
+                >Ir a proyecto</a
+              >
+            </div>
+          </div>
 
-          <div class="tipo">
-            <p>PAGINA WEB</p>
-          </div>
-          <div class="titulo">
-            <h1 translate="no">Portafolio Dsains</h1>
-          </div>
-          <div class="parrafo">
-            <a class="cursor-scale small"
-            class="boton_contactar "
-            href="https://dsilgadosalcedo.vercel.app/"
-            target="_blank"
-            >Ir a proyecto</a>
-          </div>
-
-          </div>
-
-          <Div class="pie_titulo">
+          <div class="pie_titulo">
             <div class="cont_titulo_pie">
               <h4 class="titulou">Presupuesto</h4>
-              <p class="titulo_valor">USD <strong class="simbolo">$</strong>0</p>
+              <p class="titulo_valor">
+                USD <strong class="simbolo">$</strong>0
+              </p>
             </div>
-            <div class="cont_titulo_pie" style="border-left: 1px solid black;">
+            <div class="cont_titulo_pie" style="border-left: 1px solid black">
               <h4 class="titulou">Tiempo de entraga</h4>
               <p class="titulo_valor">4 semanas</p>
             </div>
-          </Div>
+          </div>
         </div>
         <!-- .2 banner -->
         <section class="cont_banner">
@@ -154,7 +154,12 @@
 
       <!-- .3 acerca del proyecto -->
       <section id="unop" class="cont_acercadelproyecto">
-        <h3>Acerca del proyecto</h3>
+        <div class="titulo_cont">
+
+          <H5>Acerca del proyecto</H5>
+          <h3>Portafolio para desarrollador fronted</h3>
+
+        </div>
         <div class="cont_data_proyecto">
           <div class="data">
             <div class="cont_dato">
@@ -186,7 +191,12 @@
             </div>
           </div>
           <div class="data_proyecto">
-            Portafolio web, echo con el fin de mostrar proyectos de diferentes áreas enfocadas al diseño y desarrollo de productos tecnológicos como ux -ui , ux - writing, ux - research y desarrollo frontend, este proyecto es propio por lo que el diseño y desarrollo es propio de dsains, todo el estilo esta hecho en base logo, animaciones sencillas con paleta bi tono.
+            Portafolio web, echo con el fin de mostrar proyectos de diferentes
+            áreas enfocadas al diseño y desarrollo de productos tecnológicos
+            como ux -ui , ux - writing, ux - research y desarrollo frontend,
+            este proyecto es propio por lo que el diseño y desarrollo es propio
+            de dsains, todo el estilo esta hecho en base logo, animaciones
+            sencillas con paleta bi tono.
           </div>
         </div>
       </section>
@@ -201,7 +211,7 @@
             </p>
             <p style="color: #000000">#FFFFFF</p>
           </div>
-          <div style="background: #F32400" class="cont_color_uno">
+          <div style="background: #f32400" class="cont_color_uno">
             <p class="titulo">Primario</p>
             <p>#F32400</p>
           </div>
@@ -242,30 +252,28 @@
             </div>
           </div>
         </div>
-
       </section>
+    </div>
 
-      </div>
-      
     <!-- .6 imagenes -->
     <section class="cont_img">
-        <div class="cont_img_grup">
-          <div class="cont_img_uno">
-            <img src="../assets/img/mockupjannieruno.jpg" alt="" />
-          </div>
-          <div class="cont_img_dos">
-            <video
-              autoplay
-              muted
-              playsinline
-              loop
-              src="../assets/img/janiericonos.mp4"
-            ></video>
-          </div>
+      <div class="cont_img_grup">
+        <div class="cont_img_uno">
+          <img src="../assets/img/mockupjannieruno.jpg" alt="" />
         </div>
-        <div class="cont_img_tres">
-          <img src="../assets/img/bannertres.png" alt="img_tres" />
+        <div class="cont_img_dos">
+          <video
+            autoplay
+            muted
+            playsinline
+            loop
+            src="../assets/img/janiericonos.mp4"
+          ></video>
         </div>
+      </div>
+      <div class="cont_img_tres">
+        <img src="../assets/img/bannertres.png" alt="img_tres" />
+      </div>
     </section>
 
     <!-- *. pie de pagina -->
@@ -316,8 +324,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="../js/script.js"></script>
-
-
-
   </body>
 </html>
