--- a/projects/proyecto_portafolio_dsains.html
+++ b/projects/proyecto_portafolio_dsains.html
@@ -155,10 +155,8 @@
       <!-- .3 acerca del proyecto -->
       <section id="unop" class="cont_acercadelproyecto">
         <div class="titulo_cont">
-
-          <H5>Acerca del proyecto</H5>
+          <h5>Acerca del proyecto</h5>
           <h3>Portafolio para desarrollador fronted</h3>
-
         </div>
         <div class="cont_data_proyecto">
           <div class="data">
@@ -226,30 +224,26 @@
       <section id="tresp" class="cont_fuentes" content="notranslate">
         <h3>Tipografia</h3>
 
-        <div class="fuente">
-          <p>Primera Fuente</p>
-          <img class="img_font" src="../assets/img/monasans.svg" alt="" />
-          <div class="cont_fuentess">
-            <div class="cont_font">
-              <img src="../assets/img/blackwide.svg" alt="" />
-              <p class="nombre_fuente">Black Wide</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/boldwide.svg" alt="" />
-              <p class="nombre_fuente">Bold Wide</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/mediumwide.svg" alt="" />
-              <p class="nombre_fuente">Medium Wide</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/regularwide.svg" alt="" />
-              <p class="nombre_fuente">Regular Wide</p>
-            </div>
-            <div class="cont_font">
-              <img src="../assets/img/lightwide.svg" alt="" />
-              <p class="nombre_fuente">Light Wide</p>
-            </div>
+        <div class="contenido_fuente">
+          <img
+            class="img_fuente"
+            src="/assets/img/iconosproyectos/monasans.png"
+            alt=""
+          />
+          <div class="cont_pie_fuente">
+            <img
+              class="img_pie_fuente"
+              src="/assets/img/iconosproyectos/piemonasans.png"
+              alt=""
+            />
+
+            <p class="parrafo_pie_fuente">
+              <strong>Mona Sans: </strong>es una familia tipográfica sans-serif geométrica y
+              llamativa, diseñada en conjunto con Degarism e inspirada en los
+              grotescos de la era industrial. Mona Sans funciona bien en
+              productos, web e impresos. Diseñada para funcionar bien junto con
+              el compañero de Mona Sans, Hubot Sans.
+            </p>
           </div>
         </div>
       </section>
