add img texto pie

--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -242,6 +242,12 @@
               alt=""
             />
 
+            <img
+            class="img_dos_pie_fuente"
+            src="/assets/img/iconosproyectos/imgtextomovilmonasans.png"
+            alt=""
+          />
+
             <p class="parrafo_pie_fuente">
               <strong>Mona Sans: </strong>es una familia tipográfica sans-serif geométrica y
               llamativa, diseñada en conjunto con Degarism e inspirada en los
