ajuste de imagen

--- a/projects/proyecto_portafolio_dsains.html
+++ b/projects/proyecto_portafolio_dsains.html
@@ -237,13 +237,19 @@
               alt=""
             />
 
-            <p class="parrafo_pie_fuente">
+            <img
+            class="img_dos_pie_fuente"
+            src="/assets/img/iconosproyectos/imgtextomovilmonasans.png"
+            alt=""
+          />
+
+          <p class="parrafo_pie_fuente">
               <strong>Mona Sans: </strong>es una familia tipográfica sans-serif geométrica y
               llamativa, diseñada en conjunto con Degarism e inspirada en los
               grotescos de la era industrial. Mona Sans funciona bien en
               productos, web e impresos. Diseñada para funcionar bien junto con
               el compañero de Mona Sans, Hubot Sans.
-            </p>
+          </p>
           </div>
         </div>
       </section>
@@ -266,7 +272,7 @@
         </div>
       </div>
       <div class="cont_img_tres">
-        <img src="../assets/img/bannertres.png" alt="img_tres" />
+        <img src="../assets/img/iconosproyectos/contproyectos.png" alt="img_tres" />
       </div>
     </section>
 
